# unittest-example

./: CMakeLists.txt  README.md
cmake/: unittest.cmake
tests/: CMakeLists.txt  unittest01.cpp  unittest02.cpp
